# OpenManipulator

./: OM_cs.md  README.md  open_manipulator_controller.launch
Basic Scan/: open_manipulator_controller_dup.launch  rb5_moveit_open_manipulator_dup.py
Grasp-pose-detection-master/: CMakeLists.txt  Camera_D435i.cpp  Camera_D435i.h  README.md  main.cpp
distance-xyz/: CMakeLists.txt  rs-distance.c
my_open_manipulator_teleop/: CMakeLists.txt  package.xml
my_open_manipulator_teleop/include/open_manipulator_teleop/: open_manipulator_teleop_keyboard.h
my_open_manipulator_teleop/launch/: my_open_manipulator_teleop_keyboard.launch
my_open_manipulator_teleop/src/: open_manipulator_teleop_keyboard.cpp
non_blocking_teleop/: CMakeLists.txt  package.xml
non_blocking_teleop/include/: example.h  open_manipulator_teleop_keyboard.h
non_blocking_teleop/launch/: non_blocking_teleop.launch
non_blocking_teleop/src/: open_manipulator_teleop_keyboard.cpp
open_manipulator_pick_and_place/: CMakeLists.txt
open_manipulator_pick_and_place/include/open_manipulator_pick_and_place/: open_manipulator_pick_and_place.h
open_manipulator_pick_and_place/src/: open_manipulator_pick_and_place_1.cpp
